src/test/ui/issues/issue-40000.stderr
error[E0308]: mismatched types
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^ expected concrete lifetime, found bound lifetime parameter
   |
   = note: expected type `Box<(dyn for<'r> Fn(&'r i32) + 'static)>`
              found type `Box<dyn Fn(_)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
